--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,8 @@ panic = "abort"
 [dependencies]
 bootloader = "0.6.3"
 volatile = "0.2.6"
+spin = "0.5.0"
+
+[dependencies.lazy_static]
+version = "1.3.0"
+features = ["spin_no_std"]
